# announcements

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  link.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260525_0001_initial_schema.py
docs/architecture/: component.puml  deployment.puml  erd.puml  sequence_create.puml
nginx/: Dockerfile  nginx.conf
scripts/: render_diagrams.sh
src/: main.py  models.py
src/announcements/: app.py  config.py  main.py
src/announcements/api/: auth.py  deps.py
src/announcements/api/v1/: router.py
src/announcements/db/: orm.py  session.py
src/announcements/domain/: models.py
src/announcements/repositories/: in_memory.py  protocol.py  sqlalchemy.py
src/announcements/services/: announcement_service.py  webhook_notifier.py
tests/e2e/: test_api_v1.py
tests/integration/: test_alembic_migration.py  test_sqlalchemy_repository.py
tests/unit/: test_announcement_service.py  test_config.py  test_domain_models.py  test_in_memory_repository.py  test_main.py  test_webhook_notifier.py  tests.py
