[project]
name = "announcements"
version = "1.0.0"
description = "Employee Announcements Center — authenticated REST API for posting company-wide announcements."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "tzone85" }]
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "sqlalchemy==2.0.36",
    "psycopg[binary]==3.2.3",
    "alembic==1.14.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "respx==0.22.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
]

[project.scripts]
announcements = "announcements.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/announcements"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=src/announcements --cov-report=term-missing --cov-report=xml"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests that need a real Postgres database (set DATABASE_URL)",
    "e2e: full-stack tests via FastAPI TestClient",
]
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "ARG", "RUF"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
explicit_package_bases = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
